Updates relatead to form builder update

--- a/features/fixtures/files/child_protection_cases_with_errors.html
+++ b/features/fixtures/files/child_protection_cases_with_errors.html
@@ -2,6 +2,7 @@
   <fieldset class="govuk-fieldset"
             aria-describedby="steps-opening-child-protection-cases-form-child-protection-cases-error steps-opening-child-protection-cases-form-child-protection-cases-supplemental">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl"><h1 class="govuk-fieldset__heading">Are the children involved in any emergency protection, care or supervision proceedings (or have they been)?</h1></legend>
+    <input value="" type="hidden" name="steps_opening_child_protection_cases_form[child_protection_cases]" id="steps_opening_child_protection_cases_form_child_protection_cases">
     <div id="steps-opening-child-protection-cases-form-child-protection-cases-supplemental">
       <p class="govuk-body-l">These will often involve a local authority.</p>
     </div>
