--- a/features/fixtures/files/child_protection_cases.html
+++ b/features/fixtures/files/child_protection_cases.html
@@ -1,6 +1,7 @@
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="steps-opening-child-protection-cases-form-child-protection-cases-supplemental">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl"><h1 class="govuk-fieldset__heading">Are the children involved in any emergency protection, care or supervision proceedings (or have they been)?</h1></legend>
+    <input value="" type="hidden" name="steps_opening_child_protection_cases_form[child_protection_cases]" id="steps_opening_child_protection_cases_form_child_protection_cases">
     <div id="steps-opening-child-protection-cases-form-child-protection-cases-supplemental">
       <p class="govuk-body-l">These will often involve a local authority.</p>
     </div>
