--- a/features/fixtures/files/nature_of_application.html
+++ b/features/fixtures/files/nature_of_application.html
@@ -2,7 +2,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="steps-petition-orders-form-orders-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl"><h1 class="govuk-fieldset__heading">What are you asking the court to decide about the children involved?</h1></legend>
     <span class="govuk-hint" id="steps-petition-orders-form-orders-hint">Select all that apply</span>
-    <input value="" name="steps_petition_orders_form[orders][]" type="hidden" id="steps_petition_orders_form_orders">
+    <input value="" name="steps_petition_orders_form[orders][]" autocomplete="off" type="hidden" id="steps_petition_orders_form_orders">
     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
       <div class="govuk-checkboxes__item"><input id="steps-petition-orders-form-orders-child-arrangements-home-field"
                                                  class="govuk-checkboxes__input" type="checkbox"
@@ -35,7 +35,8 @@
           <fieldset class="govuk-fieldset">
             <div class="govuk-checkboxes" data-module="govuk-checkboxes"><input type="hidden"
                                                                                 name="steps_petition_orders_form[orders_collection][]"
-                                                                                value="">
+                                                                                value=""
+                                                                                autocomplete="off">
               <div class="govuk-checkboxes__item"><input
                   id="steps-petition-orders-form-orders-collection-prohibited-steps-names-field"
                   class="govuk-checkboxes__input" type="checkbox" value="prohibited_steps_names"
@@ -88,7 +89,8 @@
           <fieldset class="govuk-fieldset">
             <div class="govuk-checkboxes" data-module="govuk-checkboxes"><input type="hidden"
                                                                                 name="steps_petition_orders_form[orders_collection][]"
-                                                                                value="">
+                                                                                value=""
+                                                                                autocomplete="off">
               <div class="govuk-checkboxes__item"><input
                   id="steps-petition-orders-form-orders-collection-specific-issues-holiday-field"
                   class="govuk-checkboxes__input" type="checkbox" value="specific_issues_holiday"
