--- a/features/fixtures/files/nature_of_application_with_errors.html
+++ b/features/fixtures/files/nature_of_application_with_errors.html
@@ -4,7 +4,7 @@
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl"><h1 class="govuk-fieldset__heading">What are you asking the court to decide about the children involved?</h1></legend>
     <span class="govuk-hint" id="steps-petition-orders-form-orders-hint">Select all that apply</span><span
       class="govuk-error-message" id="steps-petition-orders-form-orders-error"><span class="govuk-visually-hidden">Error: </span>Select what you’re asking the court to decide</span>
-    <input value="" name="steps_petition_orders_form[orders][]" type="hidden" id="steps_petition_orders_form_orders">
+    <input value="" name="steps_petition_orders_form[orders][]" autocomplete="off" type="hidden" id="steps_petition_orders_form_orders">
     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
       <div class="govuk-checkboxes__item"><input id="steps-petition-orders-form-orders-field-error"
                                                  class="govuk-checkboxes__input" type="checkbox"
@@ -36,7 +36,8 @@
           <fieldset class="govuk-fieldset">
             <div class="govuk-checkboxes" data-module="govuk-checkboxes"><input type="hidden"
                                                                                 name="steps_petition_orders_form[orders_collection][]"
-                                                                                value="">
+                                                                                value=""
+                                                                                autocomplete="off">
               <div class="govuk-checkboxes__item"><input
                   id="steps-petition-orders-form-orders-collection-prohibited-steps-names-field"
                   class="govuk-checkboxes__input" type="checkbox" value="prohibited_steps_names"
@@ -89,7 +90,8 @@
           <fieldset class="govuk-fieldset">
             <div class="govuk-checkboxes" data-module="govuk-checkboxes"><input type="hidden"
                                                                                 name="steps_petition_orders_form[orders_collection][]"
-                                                                                value="">
+                                                                                value=""
+                                                                                autocomplete="off">
               <div class="govuk-checkboxes__item"><input
                   id="steps-petition-orders-form-orders-collection-specific-issues-holiday-field"
                   class="govuk-checkboxes__input" type="checkbox" value="specific_issues_holiday"
