--- a/features/fixtures/files/child_protection_cases_with_errors.html
+++ b/features/fixtures/files/child_protection_cases_with_errors.html
@@ -6,9 +6,9 @@
     <div id="steps-opening-child-protection-cases-form-child-protection-cases-supplemental">
       <p class="govuk-body-l">These will usually involve a local authority.</p>
     </div>
-    <span
+    <p
       class="govuk-error-message" id="steps-opening-child-protection-cases-form-child-protection-cases-error"><span
-      class="govuk-visually-hidden">Error: </span>Select yes or no</span>
+      class="govuk-visually-hidden">Error: </span>Select yes or no</p>
     <div class="govuk-radios" data-module="govuk-radios">
       <div class="govuk-radios__item"><input
           id="steps-opening-child-protection-cases-form-child-protection-cases-field-error" class="govuk-radios__input"
