--- a/features/fixtures/files/order_jurisdiction_with_errors.html
+++ b/features/fixtures/files/order_jurisdiction_with_errors.html
@@ -2,9 +2,9 @@
   <fieldset class="govuk-fieldset"
             aria-describedby="steps-international-jurisdiction-form-international-jurisdiction-error steps-international-jurisdiction-form-international-jurisdiction-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl"><h1 class="govuk-fieldset__heading">Do you think another person in this application may be able to apply for a similar order in a country outside England or Wales?</h1></legend>
-    <span class="govuk-hint" id="steps-international-jurisdiction-form-international-jurisdiction-hint">For example, because a court in another country has the power to act (has jurisdiction).</span><span
+    <div class="govuk-hint" id="steps-international-jurisdiction-form-international-jurisdiction-hint">For example, because a court in another country has the power to act (has jurisdiction).</div><p
       class="govuk-error-message" id="steps-international-jurisdiction-form-international-jurisdiction-error"><span
-      class="govuk-visually-hidden">Error: </span>Select yes or no</span>
+      class="govuk-visually-hidden">Error: </span>Select yes or no</p>
     <div class="govuk-radios" data-module="govuk-radios">
       <div class="govuk-radios__item"><input
           id="steps-international-jurisdiction-form-international-jurisdiction-field-error" class="govuk-radios__input"
