--- a/features/fixtures/files/miam_certification_date.html
+++ b/features/fixtures/files/miam_certification_date.html
@@ -5,15 +5,15 @@
     <div id="steps-miam-certification-date-form-miam-certification-date-supplemental">
       <p class="govuk-body">You can usually find this date on the document from the mediator.</p>
     </div>
-    <span class="govuk-hint"
-          id="steps-miam-certification-date-form-miam-certification-date-hint">For example, 31 3 2020</span>
+    <div class="govuk-hint"
+          id="steps-miam-certification-date-form-miam-certification-date-hint">For example, 31 3 2020</div>
     <div class="govuk-date-input">
       <div class="govuk-date-input__item">
         <div class="govuk-form-group"><label class="govuk-label govuk-date-input__label"
                                              for="steps_miam_certification_date_form_miam_certification_date_3i">Day</label><input
             id="steps_miam_certification_date_form_miam_certification_date_3i"
             class="govuk-input govuk-date-input__input govuk-input--width-2"
-            name="steps_miam_certification_date_form[miam_certification_date(3i)]" type="text" pattern="[0-9]*"
+            name="steps_miam_certification_date_form[miam_certification_date(3i)]" type="text"
             inputmode="numeric"></div>
       </div>
       <div class="govuk-date-input__item">
@@ -21,7 +21,7 @@
                                              for="steps_miam_certification_date_form_miam_certification_date_2i">Month</label><input
             id="steps_miam_certification_date_form_miam_certification_date_2i"
             class="govuk-input govuk-date-input__input govuk-input--width-2"
-            name="steps_miam_certification_date_form[miam_certification_date(2i)]" type="text" pattern="[0-9]*"
+            name="steps_miam_certification_date_form[miam_certification_date(2i)]" type="text"
             inputmode="numeric"></div>
       </div>
       <div class="govuk-date-input__item">
@@ -29,7 +29,7 @@
                                              for="steps_miam_certification_date_form_miam_certification_date_1i">Year</label><input
             id="steps_miam_certification_date_form_miam_certification_date_1i"
             class="govuk-input govuk-date-input__input govuk-input--width-4"
-            name="steps_miam_certification_date_form[miam_certification_date(1i)]" type="text" pattern="[0-9]*"
+            name="steps_miam_certification_date_form[miam_certification_date(1i)]" type="text"
             inputmode="numeric"></div>
       </div>
     </div>
