RST-6940 - Updated fixtures with new govuk init

--- a/features/fixtures/files/child_protection_cases_with_errors.html
+++ b/features/fixtures/files/child_protection_cases_with_errors.html
@@ -9,7 +9,7 @@
     <p
       class="govuk-error-message" id="steps-opening-child-protection-cases-form-child-protection-cases-error"><span
       class="govuk-visually-hidden">Error: </span>Select yes or no</p>
-    <div class="govuk-radios" data-module="govuk-radios">
+    <div class="govuk-radios" data-module="govuk-radios" data-govuk-radios-init="">
       <div class="govuk-radios__item"><input
           id="steps-opening-child-protection-cases-form-child-protection-cases-field-error" class="govuk-radios__input"
           type="radio" value="yes" name="steps_opening_child_protection_cases_form[child_protection_cases]"><label
