--- a/features/fixtures/files/nature_of_application.html
+++ b/features/fixtures/files/nature_of_application.html
@@ -3,7 +3,7 @@
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl"><h1 class="govuk-fieldset__heading">What are you asking the court to decide about the children involved?</h1></legend>
     <div class="govuk-hint" id="steps-petition-orders-form-orders-hint">Select all that apply</div>
     <input value="" name="steps_petition_orders_form[orders][]" autocomplete="off" type="hidden" id="steps_petition_orders_form_orders">
-    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+    <div class="govuk-checkboxes" data-module="govuk-checkboxes" data-govuk-checkboxes-init="">
       <div class="govuk-checkboxes__item"><input id="steps-petition-orders-form-orders-child-arrangements-home-field"
                                                  class="govuk-checkboxes__input" type="checkbox"
                                                  value="child_arrangements_home"
@@ -33,7 +33,7 @@
            id="steps-petition-orders-form-orders-group-prohibited-steps-conditional">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes"><input type="hidden"
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes" data-govuk-checkboxes-init=""><input type="hidden"
                                                                                 name="steps_petition_orders_form[orders_collection][]"
                                                                                 value=""
                                                                                 autocomplete="off">
@@ -87,7 +87,7 @@
            id="steps-petition-orders-form-orders-group-specific-issues-conditional">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes"><input type="hidden"
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes" data-govuk-checkboxes-init=""><input type="hidden"
                                                                                 name="steps_petition_orders_form[orders_collection][]"
                                                                                 value=""
                                                                                 autocomplete="off">
