--- a/features/fixtures/files/order_jurisdiction_with_errors.html
+++ b/features/fixtures/files/order_jurisdiction_with_errors.html
@@ -5,7 +5,7 @@
     <div class="govuk-hint" id="steps-international-jurisdiction-form-international-jurisdiction-hint">For example, because a court in another country has the power to act (has jurisdiction).</div><p
       class="govuk-error-message" id="steps-international-jurisdiction-form-international-jurisdiction-error"><span
       class="govuk-visually-hidden">Error: </span>Select yes or no</p>
-    <div class="govuk-radios" data-module="govuk-radios">
+    <div class="govuk-radios" data-module="govuk-radios" data-govuk-radios-init="">
       <div class="govuk-radios__item"><input
           id="steps-international-jurisdiction-form-international-jurisdiction-field-error" class="govuk-radios__input"
           type="radio" value="yes" name="steps_international_jurisdiction_form[international_jurisdiction]"
