--- a/features/fixtures/files/child_protection_cases.html
+++ b/features/fixtures/files/child_protection_cases.html
@@ -5,7 +5,7 @@
     <div id="steps-opening-child-protection-cases-form-child-protection-cases-supplemental">
       <p class="govuk-body-l">These will usually involve a local authority.</p>
     </div>
-    <div class="govuk-radios" data-module="govuk-radios">
+    <div class="govuk-radios" data-module="govuk-radios" data-govuk-radios-init="">
       <div class="govuk-radios__item"><input
           id="steps-opening-child-protection-cases-form-child-protection-cases-yes-field" class="govuk-radios__input"
           type="radio" value="yes" name="steps_opening_child_protection_cases_form[child_protection_cases]"><label
