--- a/features/fixtures/files/nature_of_application_with_errors.html
+++ b/features/fixtures/files/nature_of_application_with_errors.html
@@ -5,7 +5,7 @@
     <div class="govuk-hint" id="steps-petition-orders-form-orders-hint">Select all that apply</div><p
       class="govuk-error-message" id="steps-petition-orders-form-orders-error"><span class="govuk-visually-hidden">Error: </span>Select what you’re asking the court to decide</p>
     <input value="" name="steps_petition_orders_form[orders][]" autocomplete="off" type="hidden" id="steps_petition_orders_form_orders">
-    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+    <div class="govuk-checkboxes" data-module="govuk-checkboxes" data-govuk-checkboxes-init="">
       <div class="govuk-checkboxes__item"><input id="steps-petition-orders-form-orders-field-error"
                                                  class="govuk-checkboxes__input" type="checkbox"
                                                  value="child_arrangements_home"
@@ -34,7 +34,7 @@
            id="steps-petition-orders-form-orders-group-prohibited-steps-conditional">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes"><input type="hidden"
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes" data-govuk-checkboxes-init=""><input type="hidden"
                                                                                 name="steps_petition_orders_form[orders_collection][]"
                                                                                 value=""
                                                                                 autocomplete="off">
@@ -88,7 +88,7 @@
            id="steps-petition-orders-form-orders-group-specific-issues-conditional">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes"><input type="hidden"
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes" data-govuk-checkboxes-init=""><input type="hidden"
                                                                                 name="steps_petition_orders_form[orders_collection][]"
                                                                                 value=""
                                                                                 autocomplete="off">
