--- a/features/fixtures/files/order_jurisdiction.html
+++ b/features/fixtures/files/order_jurisdiction.html
@@ -3,7 +3,7 @@
             aria-describedby="steps-international-jurisdiction-form-international-jurisdiction-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl"><h1 class="govuk-fieldset__heading">Do you think another person in this application may be able to apply for a similar order in a country outside England or Wales?</h1></legend>
     <div class="govuk-hint" id="steps-international-jurisdiction-form-international-jurisdiction-hint">For example, because a court in another country has the power to act (has jurisdiction).</div>
-    <div class="govuk-radios" data-module="govuk-radios">
+    <div class="govuk-radios" data-module="govuk-radios" data-govuk-radios-init="">
       <div class="govuk-radios__item"><input
           id="steps-international-jurisdiction-form-international-jurisdiction-yes-field" class="govuk-radios__input"
           type="radio" value="yes" name="steps_international_jurisdiction_form[international_jurisdiction]"
